(Page) pages dark mode solved

--- a/src/assets/sass/utilities/_bg.scss
+++ b/src/assets/sass/utilities/_bg.scss
@@ -83,6 +83,26 @@
   &-6 {
     background: linear-gradient(115deg, #FFF 38.69%, #DBF4FF 100%);
   }
+
+  &-7 {
+    background: linear-gradient(270deg, rgba(0, 195, 29, 0.1) 0%, rgba(0, 195, 29, 0.01) 50.07%);
+  }
+
+  &-8 {
+    background: linear-gradient(270deg, rgba(213, 49, 40, 0.1) 0%, rgba(213, 49, 40, 0.01) 51.17%);
+  }
+
+  &-9 {
+    background: linear-gradient(270deg, rgba(168, 11, 228, 0.1) 0%, rgba(168, 11, 228, 0.01) 48.59%);
+  }
+
+  &-10 {
+    background: linear-gradient(270deg, rgba(4, 180, 255, 0.1) 0%, rgba(4, 180, 255, 0.01) 53.9%);
+  }
+
+  &-11 {
+    background: linear-gradient(270deg, rgba(255, 122, 44, 0.1) 0%, rgba(255, 122, 44, 0.01) 56.64%);
+  }
 }
 
 [data-theme=dark] {
